===============================================================================
Changes for patch v209

- Updated README from master HTML file

- Removed silently introduced calls to lock_kernel() and
  unlock_kernel() due to recent VFS locking changes. BKL isn't
  required in devfs 

- Changed <devfs_rmdir> to allow later additions if not yet empty

- Added calls to <devfs_register_partitions> in drivers/block/blkpc.c
  <add_partition> and <del_partition>

- Fixed bug in <devfs_alloc_unique_number>: was clearing beyond
  bitfield

- Fixed bitfield data type for <devfs_*alloc_devnum>

- Made major bitfield type and initialiser 64 bit safe
===============================================================================
Changes for patch v210

- Updated fs/devfs/util.c to fix shift warning on 64 bit machines
  Thanks to Anton Blanchard <anton@samba.org>

- Updated README from master HTML file
===============================================================================
Changes for patch v211

- Do not put miscellaneous character devices in /dev/misc if they
  specify their own directory (i.e. contain a '/' character)

- Copied macro for error messages from fs/devfs/base.c to
  fs/devfs/util.c and made use of this macro

- Removed 2.4.x compatibility code from fs/devfs/base.c
===============================================================================
Changes for patch v212

- Added BKL to <devfs_open> because drivers still need it
===============================================================================
Changes for patch v213

- Protected <scan_dir_for_removable> and <get_removable_partition>
  from changing directory contents
===============================================================================
Changes for patch v214

- Switched to ISO C structure field initialisers

- Switch to set_current_state() and move before add_wait_queue()

- Updated README from master HTML file

- Fixed devfs entry leak in <devfs_readdir> when *readdir fails